# deflect

./: .gitignore  Caddyfile  README.md  access.log.example  pyproject.toml  visitor_counter.py
src/deflect/: __main__.py  logfile.py  visitorfile.py
test/: test_utils.py  test_visitorfile.py
